[package]
name = "imtui"
version = "0.1.0"
authors = ["Shaheen Gandhi <shaheen@oculus.com>"]
description = "High-level Rust bindings for imtui"
categories = ["api-bindings"]
edition = "2018"
readme = "README.md"

[dependencies]
imtui-sys = { version = "0.1.0", path = "imtui-sys" }
imgui = { version = "0.2.1", path = "imgui-rs" }

[workspace]
members = [
    "imtui-sys"
]

exclude = [
    "imtui-examples",
    "imtui-sys-bindgen",
    "imgui-rs"
]
