[package]
name = "imtui"
version = "0.1.0"
authors = ["Shaheen Gandhi <visigoth@gmail.com>"]
description = "High-level Rust bindings for imtui"
keywords = ["terminal", "TUI", "FFI", "imtui", "Dear ImGui", "imgui"]
categories = ["api-bindings"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/visigoth/imtui-rs"

[dependencies]
imtui-sys = { version = "0.1.0", path = "imtui-sys" }
imgui = { version = "0.2.1", path = "imgui-rs" }
timeago = "0.2.1"
log = "0.4.11"
env_logger = "0.8.2"

[dev-dependencies]
variant_count = "*"
lazy_static = "1.4.0"
maplit = "*"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.10.8", features = ["json"] }
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }
clap = "3.0.0-beta.2"
rusty-man = "0.4.0"
debug-here = "0.2"
eyre = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"

[workspace]
members = [
    "imtui-sys"
]

exclude = [
    "imtui-examples",
    "imtui-sys-bindgen",
    "imgui-rs"
]
