[package]
name = "imtui-examples"
version = "0.1.0"
authors = ["Shaheen Gandhi <shaheen@oculus.com>"]
edition = "2018"
description = "imtui crate examples"
publish = false

[dev-dependencies]
imtui = { version = "0.1.0", path = "../" }
imgui = { version = "0.2.1", path = "../imgui-rs" }

[dependencies]
variant_count = "*"
lazy_static = "1.4.0"
maplit = "*"
chrono = "0.4.15"
reqwest = { version = "0.10.8", features = ["json"] }
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }
